<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile2"
            android:icon="@drawable/ic_person"
            android:title="@string/profile_details" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_add"
            android:title="@string/add_service_offered" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_services"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_history2"
            android:icon="@drawable/ic_history"
            android:title="@string/history_of_requests" />
        <item
            android:id="@+id/nav_logout2"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>