<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/requestSelected"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="20dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/client_name"
            android:textColor="@color/dark_grey"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/requestDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/_28_08_2021"
            android:textColor="@color/dark_grey"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/accept" />

            <Button
                android:id="@+id/btn_reject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/reject" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>