<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="20dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/name"
            android:textColor="@color/dark_grey"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateOfRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/_28_08_2021"
            android:textColor="@color/dark_grey"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/requestStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/completed"
            android:textColor="@color/yellow"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>