<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity2"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/insert_profile_picture"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/post_profile_image2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/add_profile" />

        <TextView
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_profile_image2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/select_th_service_you_will_offer"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/service_offered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_profile_image2"
            android:layout_toEndOf="@id/service"
            android:layout_toRightOf="@id/service"
            android:spinnerMode="dropdown"
            android:background="@color/dark_grey"/>

        <Button
            android:id="@+id/btn_profile2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/service"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:text="@string/done" />
    </RelativeLayout>
</ScrollView>